--- a/src/app/pages/students/students.component.html
+++ b/src/app/pages/students/students.component.html
@@ -1,1 +1,35 @@
-<p>students works!</p>
+<div class="container text-center">
+    <div class="row g-3 mt-5">
+        <div class="">Agregar Estudiante</div>
+    </div>
+    <div class="row g-3 mt-3 justify-content-start">
+        <div class="col-lg-2 col-md-2 col-sm-2 ">
+            <button>
+                <i class="fa-solid fa-eraser"></i>
+            </button>
+        </div>
+    </div>
+    <form [formGroup]="form">
+        <div class="row g-3 mt-3">
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre" formControlName="name">
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido" formControlName="lastname">
+            </div>
+        </div>
+        <div class="row g-3 mt-3">
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Cédula" aria-label="Cédula" formControlName="dni">
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Correo electrónico" aria-label="Correo electrónico" formControlName="email">
+            </div>
+        </div>
+        <div class="row g-3 mt-3 justify-content-center">
+            <div class="col">
+                <button class="btn btn-outline-primary px-5" type="button" (click)="registro(form.value)">Guardar</button>
+            </div>
+        </div>
+    </form>
+</div>
