--- a/src/app/pages/grades/grades.component.html
+++ b/src/app/pages/grades/grades.component.html
@@ -1,1 +1,22 @@
-<p>grades works!</p>
+<div class="container">
+    <div class="parent mt-5">
+        <div class="div1"> 
+            Nombre
+        </div>
+        <div class="div2"> 
+            dfghjk
+        </div>
+        <div class="div3"> 
+            dfghjk
+        </div>
+        <div class="div4"> 
+            dfghjk
+        </div>
+        <div class="div5"> 
+            dfghjk
+        </div>
+        <div class="div6"> 
+            dfghjk
+        </div>
+    </div>
+</div>
