--- a/src/app/pages/students/students.component.html
+++ b/src/app/pages/students/students.component.html
@@ -4,10 +4,15 @@
     </div>
     <div class="row g-3 mt-3 justify-content-start">
         <div class="col-lg-2 col-md-2 col-sm-2 ">
+            <button routerLink="/">
+                <i class="fa-solid fa-arrow-left"></i>
+            </button>
+        </div>
+        <!-- <div class="col-lg-2 col-md-2 col-sm-2 ">
             <button>
                 <i class="fa-solid fa-eraser"></i>
             </button>
-        </div>
+        </div> -->
     </div>
     <form [formGroup]="form">
         <div class="row g-3 mt-3">
