--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="container text-center">
     <div class="row justify-content-center">
       <div class="col">
-        <div class="card" style="width: 18rem; margin: auto; margin-top: 10rem;">
-          <i class="fa-solid fa-user fa-2xl" style="margin: 2rem;"></i>
+        <div class="card" style="width: 13rem; margin: auto; margin-top: 3rem;">
+          <i class="fa-solid fa-user fa-2xl" style="margin-top: 2rem;"></i>
           <div class="card-body">
             <h5 class="card-title">Estudiantes</h5>
             <p class="card-text"></p>
@@ -10,8 +10,8 @@
           </div>
         </div>
       </div>
-      <div class="col">
-        <div class="card" style="width: 18rem; margin: auto; margin-top: 10rem;">
+      <!-- <div class="col">
+        <div class="card" style="width: 18rem; margin: auto; margin-top: 5rem;">
           <i class="fa-solid fa-square-pen fa-2xl" style="margin: 2rem;"></i>
           <div class="card-body">
             <h5 class="card-title">Notas</h5>
@@ -19,6 +19,37 @@
             <a routerLink="grades" class="btn btn-primary">Agregar</a>
           </div>
         </div>
-      </div>
+      </div> -->
+    </div>
+    <div class="row justify-content-center mt-5">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Apellido</th>
+            <th scope="col">Cedula</th>
+            <th scope="col">Email</th>
+            <th scope="col">Nota 1</th>
+            <th scope="col">Nota 2</th>
+            <th scope="col">Nota 3</th>
+            <th scope="col">Nota 4</th>
+            <th scope="col">Promedio 1</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of students">
+            <th scope="row">{{item.id}}</th>
+            <td>{{item.name}}</td>
+            <td>{{item.lastname}}</td>
+            <td>{{item.dni}}</td>
+            <td>{{item.email}}</td>
+            <td>{{item.id}}</td>
+            <td>{{item.id}}</td>
+            <td>{{item.id}}</td>
+            <td>{{item.id}}</td>
+            <td>{{item.id}}</td>
+        </tbody>
+      </table>
     </div>
   </div>
