--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,7 +35,6 @@
             <th scope="col">Nota 3</th>
             <th scope="col">Nota 4</th>
             <th scope="col">Promedio</th>
-            <th scope="col">Acción</th>
           </tr>
         </thead>
         <tbody>
@@ -45,12 +44,11 @@
             <td>{{item.lastname}}</td>
             <td>{{item.dni}}</td>
             <td>{{item.email}}</td>
-            <td>{{item.id}}</td>
-            <td>{{item.id}}</td>
-            <td>{{item.id}}</td>
-            <td>{{item.id}}</td>
-            <td>{{item.id}}</td>
-            <td><button (click)="nota(item.id)"><i class="fa-solid fa-plus"></i></button></td>
+            <td>{{item.n1}}</td>
+            <td>{{item.n2}}</td>
+            <td>{{item.n3}}</td>
+            <td>{{item.n4}}</td>
+            <td>{{item.prom}}</td>
         </tbody>
       </table>
     </div>
