--- a/src/app/pages/students/students.component.html
+++ b/src/app/pages/students/students.component.html
@@ -31,7 +31,36 @@
               <input type="text" class="form-control" placeholder="Correo electrónico" aria-label="Correo electrónico" formControlName="email">
             </div>
         </div>
-        <div class="row g-3 mt-3 justify-content-center">
+        <div class="row g-3 mt-3">
+            <div class="col">
+                <input type="text" class="form-control" placeholder="Nota 1" aria-label="Nota 1" formControlName="n1">
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" placeholder="Nota 2" aria-label="Nota 1" formControlName="n2">
+            </div>
+        </div>
+        <div class="row g-3 mt-3">
+            <div class="col">
+                <input type="text" class="form-control" placeholder="Nota 3" aria-label="Nota 1" formControlName="n3">
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" placeholder="Nota 4" aria-label="Nota 1" formControlName="n4">
+            </div>
+        </div>
+
+        <div class="row g-3 mt-3 justify-content-center" *ngIf="calculated == true">
+            <div class="col">
+                <h2>El promedio es: {{prom}}</h2>
+            </div>
+        </div>
+
+        <div class="row g-3 mt-3 justify-content-center" *ngIf="calculated == false">
+            <div class="col">
+                <button class="btn btn-outline-primary px-5" type="button" (click)="calcular()">Calcular</button>
+            </div>
+        </div>
+
+        <div class="row g-3 mt-3 justify-content-center" *ngIf="calculated == true">
             <div class="col">
                 <button class="btn btn-outline-primary px-5" type="button" (click)="registro(form.value)">Guardar</button>
             </div>
