--- a/src/app/pages/students/students.component.html
+++ b/src/app/pages/students/students.component.html
@@ -14,7 +14,7 @@
             </button>
         </div> -->
     </div>
-    <form [formGroup]="form">
+    <form novalidate [formGroup]="form">
         <div class="row g-3 mt-3">
             <div class="col">
               <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre" formControlName="name">
