--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,45 @@
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="https://i.ibb.co/m6tD2MS/SGA-go.png"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+          <button class="btn btn-light" style="margin-left: 10px;" routerLink="/">Home</button>
+        </li>
+          <li class="nav-item">
+            <button class="btn btn-light" style="margin-left: 10px;" routerLink="dashboard" >Dashboard</button>
+          </li>
+                  <li class="nav-item">
+                    <button class="btn btn-light" style="margin-left: 10px;" routerLink="students" >Students</button>
+          </li>
+        </ul>
+        <ul class="navbar-nav sm-icons">
+          <li><a class="nav-link" href="#"><i class="bi bi-facebook"></i></a></li>
+          <li><a class="nav-link" href="#"><i class="bi bi-instagram"></i></a></li>
+          <li><a class="nav-link" href="#"><i class="bi bi-twitter"></i></a></li>
+          <li><a class="nav-link" href="#"><i class="bi bi-pinterest"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
 <router-outlet></router-outlet>
+
+<footer class="bg-light text-center text-white" style="clear:both" >
+    <!-- Grid container -->
+    <div class="container  pb-0" style="background-color: #000000;">
+  
+  
+    </div>
+    <!-- Grid container -->
+  
+    <!-- Copyright
+    <div class="text-center p-3" style="background-color: #000000;">
+      © 2022 Copyright:
+      <a class="text-white" routerLink="">SGA GO</a>
+    </div>
+  </footer> -->
