--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -151,7 +151,7 @@
         </div>
         <div class="col-md-12 section2 pb-3">
           <p>Luis Bermeo</p>
-          <span>Test Deploy</span>
+          <span>Front-end, Test, Deploy</span>
         </div>
         <div class="col-md-12 section3">
           <a href="https://github.com/bermeo2000"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
