--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
           <i class="fa-solid fa-user fa-2xl" style="margin-top: 2rem;" ></i>
           <div class="card-body">
             <h5 class="card-title">Estudiantes</h5>
-            <p class="card-text"> <button class="btn btn-danger" routerLink="students">Agregar</button></p>
+            <p class="card-text"> <button class="btn btn-danger" [routerLink]="students">Agregar</button></p>
            
           </div>
         </div>
