--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,7 +27,7 @@
             <p class="card-text"></p>
           </div>
           <div class="card-footer">
-            <small>JetBraind Java Strip</small>
+            <small>JetBrains</small>
           </div>
         </div>
         <div class="card text-white bg-dark">
@@ -71,7 +71,7 @@
             <p class="card-text"></p>
           </div>
           <div class="card-footer">
-            <small>FireBase</small>
+            <small>Firebase</small>
           </div>
         </div>
       </div>
